# sbc-connect-common

./: README.md
nuxt/core/: .npmignore  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
nuxt/core/.playground/: nuxt.config.ts  package.json  pnpm-lock.yaml
nuxt/core/app/: app.config.ts
nuxt/core/app/composables/: useKeycloak.ts
nuxt/core/app/enums/: idp-hint.ts
nuxt/core/app/plugins/: keycloak.client.ts
nuxt/core/scripts/: publish.js
nuxt/layers/core/: .npmignore  CONTRIBUTING.md  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
nuxt/layers/core/.playground/: nuxt.config.ts  pnpm-lock.yaml
nuxt/layers/core/.playground/app/: app.config.ts  app.vue
nuxt/layers/core/app/: app.config.ts  app.vue
nuxt/layers/core/app/composables/: useConnectNav.ts  useConnectNavigate.ts  useKeycloak.ts
nuxt/layers/core/app/enums/: connect-storage-keys.ts  error-category.ts  user-roles.ts
nuxt/layers/core/app/interfaces/: account.ts  api-error.ts  fetch-error.ts  header-menu.ts  keycloak.ts  user-settings.ts
nuxt/layers/core/app/layouts/: default.vue
nuxt/layers/core/app/locales/: en-CA.ts  fr-CA.ts
nuxt/layers/core/app/middleware/: 01.setup-accounts.global.ts  02.setup-launchdarkly.global.ts  03.keycloak-params.global.ts  (+2 more)
nuxt/layers/core/scripts/: publish.js
python/: README.md
python/gcp-queue/: README.md  pyproject.toml
python/gcp-queue/src/gcp_queue/: gcp_queue.py
python/sql-versioning/: README.md  pyproject.toml
python/sql-versioning/src/sql_versioning/: __init__.py  versioned_history.py
(+68 files in other folders)
